--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@ body {
 
 .container {
   margin-bottom: 24px;
-  width: 1200px;
   height: 80px;
   padding: 0 15px;
   margin: 0 auto;
@@ -34,33 +33,29 @@ body {
 .contacts-list {
   display: flex;
   list-style-type: none;
-  justify-content: space-between;
 }
 
 .nav-list {
-  margin-left: 10px;
-  padding-left: 93px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-nav {
+  padding-left: 10%; /*215px;*/
   align-items: center;
 }
 
 .nav-list li {
-  margin-left: 10px;
-  margin-right: 10px;
-  padding-left: 10px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  margin: 25px;
 }
 
 .contacts-list {
-  /*padding-left: 93px;*/
-  padding-top: 24px;
-  padding-bottom: 24px;
-  width: 100%;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.contacts-list li {
+  margin: 25px;
 }
 
 .contacts-list li:not(:last-child) {
@@ -78,6 +73,28 @@ body {
   z-index: 2;
 }
 
+.logotype {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  width: 145px;
+  height: 31px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+
+.logotype-part1 {
+  color: #2196f3;
+}
+
+.logotype-part2 {
+  color: #000000;
+}
+
 /*-------------------*/
 
 .divlogo {
@@ -86,7 +103,6 @@ body {
 }
 
 .hero {
-  padding-bottom: 94px;
   width: 1600px;
   height: 600px;
   left: 0px;
@@ -125,12 +141,12 @@ body {
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  /*  border-radius: 4px;*/
 }
 
 .vector1 {
   padding-bottom: 25px;
-  padding-top: 25px;
+  /*  padding-top: 25px;*/
   padding-left: 102.34px;
   padding-right: 102.34px;
 }
@@ -142,10 +158,8 @@ body {
 }
 
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  /*padding-left: 215px;
-  padding-right: 215px;*/
+  padding-left: 10%;
+  padding-right: 10%;
   width: auto;
   align-self: center;
   font-size: small;
@@ -189,11 +203,10 @@ body {
 }
 
 .ourworking {
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 10px;
-  /*padding-left: 215px;
-  padding-right: 215px;*/
-  width: 100%;
+  /*padding-left: 10%;
+  padding-right: 10%;*/
   align-content: center;
   align-tracks: normal;
   font-size: small;
@@ -214,11 +227,10 @@ body {
 }
 
 .ourcommand {
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 10px;
-  /*padding-left: 215px;
-  padding-right: 215px;*/
-  width: 100%;
+  /*padding-left: 10%;
+  padding-right: 10%;*/
   align-content: center;
   text-align: center;
   font-size: small;
@@ -268,27 +280,26 @@ body {
   color: #757575;
 }
 
-.logotype {
-  padding-left: 215px;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  width: 145px;
-  height: 31px;
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  text-decoration: none;
+.ourclients {
+  padding-top: 100px;
+  padding-bottom: 10px;
+  /*padding-left: 10%;
+  padding-right: 10%;*/
+  align-content: center;
+  text-align: center;
+  font-size: small;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
-.logotype-part1 {
-  color: #2196f3;
+.ourclients-item {
+  margin: 0 15px;
 }
 
-.logotype-part2 {
-  color: #000000;
+.ourclients-item:hover {
+  stroke: white;
+  background-color: #2196f3; /*???*/
 }
 
 .img-size {
@@ -349,15 +360,14 @@ body {
 }
 
 .thisfooter {
+  padding-left: 10%; /*215px;*/
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-  left: 10%;
   color: #ffffff;
 }
 
 .address-block {
-  padding-left: 215px;
   color: rgba(ff, ff, ff, 0.6);
 }
 
@@ -373,18 +383,22 @@ body {
   color: #ffffff;
 }
 
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /*padding-left: 10%;
+  padding-right: 10%;*/
+  align-self: center;
+}
+
 .link-portfolio-menu {
-  padding-top: 174px;
-  padding-bottom: 10px;
-  padding-left: 215px;
-  padding-right: 215px;
-  width: auto;
+  padding-left: 280px;
+  padding-bottom: 50px;
   font-size: small;
   align-self: auto;
   text-align: center;
   list-style-type: none;
   display: flex;
-  justify-content: center;
 }
 
 .link-portfolio-list {
@@ -396,12 +410,12 @@ body {
 }
 
 .link-portfolio-list:hover {
+  /*color: #ffffff;
+  background: #2196f3;*/
   box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 
 .portfolio-photo {
-  width: auto;
-  height: auto;
   left: 615px;
   top: 262px;
   display: inline-table;
@@ -438,44 +452,14 @@ body {
 }
 
 .portfolio-items {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 215px;
-  padding-right: 215px;
-  width: auto;
-  align-self: center;
   text-align: center;
+  align-self: center;
   font-size: small;
 }
 
 .hr {
   margin: 0;
   padding: 4px;
-  width: auto;
-  height: auto;
-}
-
-.ourclients {
-  padding-top: 50px;
-  padding-bottom: 10px;
-  /*padding-left: 215px;
-  padding-right: 215px;*/
-  width: 100%;
-  align-content: center;
-  text-align: center;
-  font-size: small;
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-}
-
-.ourclients-item {
-  margin: 0 15px;
-}
-
-.ourclients-item:hover {
-  stroke: white;
-  fill: red;
 }
 
 .socialnetworks-links {
@@ -501,8 +485,8 @@ body {
   background-color: #2f303a;
   padding-top: 72px;
   padding-bottom: 100px;
-  /*padding-left: 215px;
-  padding-right: 215px;*/
+  padding-left: 70px;
+  /*padding-right: 215px;*/
   color: #ffffff;
   margin: 10px auto;
 }
@@ -512,7 +496,6 @@ body {
   /*padding-top: 72px;*/
   list-style-type: none;
   display: flex;
-  justify-content: center;
 }
 
 .socialfooter-item {
@@ -527,7 +510,7 @@ body {
 
 .footer {
   background-color: #2f303a;
-  display: inline-flex;
+  display: flex;
 }
 
 .main-footer {
